Bug 251666 - [WebGPU] popErrorScope causes an IPC assertion
Summary: [WebGPU] popErrorScope causes an IPC assertion
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-02 22:24 PST by Mike Wyrzykowski
Modified: 2023-02-16 18:41 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-02-02 22:24:51 PST
[WebGPU] popErrorScope causes an IPC assertion
Comment 1 Radar WebKit Bug Importer 2023-02-02 22:25:14 PST
<rdar://problem/104993240>
Comment 2 Mike Wyrzykowski 2023-02-02 22:30:44 PST
Pull request: https://github.com/WebKit/WebKit/pull/9584
Comment 3 EWS 2023-02-16 18:41:42 PST
Committed 260413@main (d5a1264b45a7): <https://commits.webkit.org/260413@main>

Reviewed commits have been landed. Closing PR #9584 and removing active labels.