[WebGPU] popErrorScope causes an IPC assertion https://bugs.webkit.org/show_bug.cgi?id=251666 <radar://104993240>

Reviewed by Myles C. Maxfield.

GPUDevice.popErrorScope is supposed to be asynchronous, so use sendWithAsyncReply
instead of sendSync.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteDevice.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteDeviceProxy.cpp:
(WebKit::WebGPU::RemoteDeviceProxy::popErrorScope):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteDeviceProxy.h:

Canonical link: https://commits.webkit.org/260413@main